--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,116 +8,255 @@
     tools:context=".MainActivity">
 
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
         <!-- this will be for the header of the application to greet the user -->
-        <LinearLayout
+        <TextView
+            android:id="@+id/quizTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorAccent"
+            android:gravity="center"
+            android:padding="16dp"
+            android:text="Welcome to Straight Facts quiz!"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/welcomeMessage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/quizTitle"
+            android:background="@color/colorAccent"
+            android:gravity="center"
+            android:padding="16dp"
+            android:text="Please feel free to scroll down to the questions and test your knowledge on African American history facts that were not taught in school!" />
+
+        <TextView
+            android:id="@+id/question1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/welcomeMessage"
+            android:background="@color/questionColor"
+            android:gravity="center"
+            android:padding="16dp"
+            android:text="Question 1 will go here" />
+
+        <Button
+            android:id="@+id/quest1AnswrA"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/question1"
+            android:layout_margin="8dp"
+            android:background="@color/buttonColor"
+            android:text="A. answer" />
+        <!--For each answer this is to be added per button android:onClick="addTwotoUserScore"-->
+
+        <Button
+            android:id="@+id/quest1AnswrB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/question1"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="8dp"
+            android:layout_toRightOf="@id/quest1AnswrA"
+            android:background="@color/buttonColor"
+            android:text="B. answer" />
+
+        <Button
+            android:id="@+id/quest1AnswrC"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/question1"
+            android:layout_marginLeft="56dp"
+            android:layout_marginTop="8dp"
+            android:layout_toRightOf="@id/quest1AnswrB"
+            android:background="@color/buttonColor"
+            android:text="C. answer" />
+
+        <TextView
+            android:id="@+id/question2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/quest1AnswrA"
+            android:background="@color/questionColor"
+            android:gravity="center"
             android:padding="16dp"
-            android:orientation="vertical"/>
+            android:text="Question 2 will go here" />
 
-            <View
-                android:layout_width="1dp"
-                android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/answr2True"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/question2"
+            android:layout_marginLeft="48dp"
+            android:layout_marginTop="8dp"
+            android:background="@color/buttonColor"
+            android:text="True" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="16dp"
-                android:background="@color/colorAccent"
-                android:orientation="vertical">
+        <Button
+            android:id="@+id/quest2False"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/question2"
+            android:layout_marginLeft="80dp"
+            android:layout_marginTop="8dp"
+            android:layout_toRightOf="@id/answr2True"
+            android:background="@color/buttonColor"
+            android:text="False" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:padding="16dp"
-                    android:textSize="24sp"
-                    android:text="Welcome to Straight Facts quiz!" />
+        <TextView
+            android:id="@+id/question3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/answr2True"
+            android:background="@color/questionColor"
+            android:gravity="center"
+            android:padding="16dp"
+            android:text="Question 3 will go here" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:padding="16dp"
-                    android:text="Please feel free to scroll down to the questions and test your knowledge on African American history facts that were not taught in school!"/>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:padding="16dp"
-                    android:background="@color/questionColor"
-                    android:text="Question 1 will go here">
-                </TextView>
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:padding="16dp"
-                        android:orientation="vertical">
-                        <Button
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:background="@color/buttonColor"
-                            android:text="A. answer"/>
-                    </LinearLayout>
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/quest3AnswrA"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/question3"
+            android:layout_margin="8dp"
+            android:background="@color/buttonColor"
+            android:text="A. answer" />
+        <!--For each answer this is to be added per button android:onClick="addTwotoUserScore"-->
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:padding="16dp"
-                    android:background="@color/questionColor"
-                    android:text="True or false Question 2 will go here">
-                </TextView>
+        <Button
+            android:id="@+id/quest3AnswrB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/question3"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="8dp"
+            android:layout_toRightOf="@id/quest3AnswrA"
+            android:background="@color/buttonColor"
+            android:text="B. answer" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:padding="16dp"
-                    android:background="@color/questionColor"
-                    android:text="Multichoice Question 3 will go here">
-                </TextView>
+        <Button
+            android:id="@+id/quest3AnswrC"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/question3"
+            android:layout_marginLeft="56dp"
+            android:layout_marginTop="8dp"
+            android:layout_toRightOf="@id/quest3AnswrB"
+            android:background="@color/buttonColor"
+            android:text="C. answer" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:padding="16dp"
-                    android:background="@color/questionColor"
-                    android:text="True or false Question 4 will go here">
-                </TextView>
+        <TextView
+            android:id="@+id/question4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/quest3AnswrA"
+            android:background="@color/questionColor"
+            android:gravity="center"
+            android:padding="16dp"
+            android:text="Question 4 will go here" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:padding="16dp"
-                    android:background="@color/questionColor"
-                    android:text="Multichoice Question 5 will go here">
-                </TextView>
+        <Button
+            android:id="@+id/answr4True"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/question4"
+            android:layout_marginLeft="48dp"
+            android:layout_marginTop="8dp"
+            android:background="@color/buttonColor"
+            android:text="True" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:padding="16dp"
-                    android:background="@color/questionColor"
-                    android:text="True or False Question 6 will go here">
-                </TextView>
+        <Button
+            android:id="@+id/answr4False"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/question4"
+            android:layout_marginLeft="80dp"
+            android:layout_marginTop="8dp"
+            android:layout_toRightOf="@+id/answr4True"
+            android:background="@color/buttonColor"
+            android:text="False" />
 
-            </LinearLayout>
-    <!-- below is the code where the questions will be displayed and the answers as well for the user to interact with. -->
-           <!-- <LinearLayout
+        <!--above are questions 3 & 4 and then below are 5 & 6 as that is the question format -->
+
+        <TextView
+            android:id="@+id/question5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/answr4True"
+            android:background="@color/questionColor"
+            android:gravity="center"
+            android:padding="16dp"
+            android:text="Question 5 will go here" />
+
+        <Button
+            android:id="@+id/quest5AnswrA"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/question5"
+            android:layout_margin="8dp"
+            android:background="@color/buttonColor"
+            android:text="A. answer" />
+        <!--For each answer this is to be added per button android:onClick="addTwotoUserScore"-->
+
+        <Button
+            android:id="@+id/quest5AnswrB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/question5"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="8dp"
+            android:layout_toRightOf="@id/quest5AnswrA"
+            android:background="@color/buttonColor"
+            android:text="B. answer" />
+
+        <Button
+            android:id="@+id/quest5AnswrC"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/question5"
+            android:layout_marginLeft="56dp"
+            android:layout_marginTop="8dp"
+            android:layout_toRightOf="@id/quest5AnswrB"
+            android:background="@color/buttonColor"
+            android:text="C. answer" />
+
+        <TextView
+            android:id="@+id/question6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/quest5AnswrA"
+            android:background="@color/questionColor"
+            android:gravity="center"
+            android:padding="16dp"
+            android:text="Question 6 will go here" />
+
+        <Button
+            android:id="@+id/answr6True"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/question6"
+            android:layout_marginLeft="48dp"
+            android:layout_marginTop="8dp"
+            android:background="@color/buttonColor"
+            android:text="True" />
+
+        <Button
+            android:id="@+id/answr6False"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/question6"
+            android:layout_marginLeft="80dp"
+            android:layout_marginTop="8dp"
+            android:layout_toRightOf="@+id/answr6True"
+            android:background="@color/buttonColor"
+            android:text="False" />
+        #below will be where the score can be seen
+
+        <!-- below is the code where the questions will be displayed and the answers as well for the user to interact with. -->
+        <!-- <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="16dp"
